2010-11-23  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/extension_uploader.php: add first version of extension
	to upload other extensions.

2010-11-22  Raúl Mateos  <raulofpandora@gmail.com>

	* gomode/agentes/module_manager.php: Closed HTML tags.

	* images/status_sets/default/agent_no_monitors*.png: Added forgotten files.

2010-11-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/help/en/help_operation_visual_console.php,
	include/help/es/help_operation_visual_console.php: added first
	version of help file for the operation main page of Visual Console,
	these have a explain for the especial name for visual consoles.
	
	* operation/visual_console/index.php: added link to help in header.
	
	operation/menu.php: added filter to hide the "Visual Console items"
	in submenu that haven't first letter as "_", "," , "[" , "(". And
	fixed the show name with safe_input entities.

2010-11-22  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/extensions.php: fixed a lost javascript trace, and fixed
	when all extensions is disabled.

2010-11-19  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_generalagente.php: Fixed the
	shows of IP in the agent view for bug 3111807

2010-11-19  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_extensions.php: added functions
	"get_disabled_extensions" and "getExtensionInfo".

	* operation/extensions.php: erased the delete extension option.

	* images/dot_green.disabled.png, images/dot_red.disabled.png: added files
	for the table of features extension.
	
	* godmode/extensions.php: show a table of extension with features and
	action to disable and delete.

2010-11-17  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/vnc_view.php: added first version of extension of to VNC view
	tab.

2010-11-17  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/reporting/reporting_viewer.php, operation/reporting/graph_viewer.php:
	Added full screen mode and other minor changes.
